; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mgb/extr_if_mgb.c_mgb_release_regs.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mgb/extr_if_mgb.c_mgb_release_regs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mgb_softc = type { i32, i32* }

@SYS_RES_MEMORY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mgb_softc*)* @mgb_release_regs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mgb_release_regs(%struct.mgb_softc* %0) #0 {
  %2 = alloca %struct.mgb_softc*, align 8
  %3 = alloca i32, align 4
  store %struct.mgb_softc* %0, %struct.mgb_softc** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load %struct.mgb_softc*, %struct.mgb_softc** %2, align 8
  %5 = getelementptr inbounds %struct.mgb_softc, %struct.mgb_softc* %4, i32 0, i32 1
  %6 = load i32*, i32** %5, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %21

8:                                                ; preds = %1
  %9 = load %struct.mgb_softc*, %struct.mgb_softc** %2, align 8
  %10 = getelementptr inbounds %struct.mgb_softc, %struct.mgb_softc* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = load i32, i32* @SYS_RES_MEMORY, align 4
  %13 = load %struct.mgb_softc*, %struct.mgb_softc** %2, align 8
  %14 = getelementptr inbounds %struct.mgb_softc, %struct.mgb_softc* %13, i32 0, i32 1
  %15 = load i32*, i32** %14, align 8
  %16 = call i32 @rman_get_rid(i32* %15)
  %17 = load %struct.mgb_softc*, %struct.mgb_softc** %2, align 8
  %18 = getelementptr inbounds %struct.mgb_softc, %struct.mgb_softc* %17, i32 0, i32 1
  %19 = load i32*, i32** %18, align 8
  %20 = call i32 @bus_release_resource(i32 %11, i32 %12, i32 %16, i32* %19)
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %8, %1
  %22 = load %struct.mgb_softc*, %struct.mgb_softc** %2, align 8
  %23 = getelementptr inbounds %struct.mgb_softc, %struct.mgb_softc* %22, i32 0, i32 1
  store i32* null, i32** %23, align 8
  %24 = load %struct.mgb_softc*, %struct.mgb_softc** %2, align 8
  %25 = getelementptr inbounds %struct.mgb_softc, %struct.mgb_softc* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @pci_disable_busmaster(i32 %26)
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @bus_release_resource(i32, i32, i32, i32*) #1

declare dso_local i32 @rman_get_rid(i32*) #1

declare dso_local i32 @pci_disable_busmaster(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
